--- a/src/main/resources/templates/planetInfo.html
+++ b/src/main/resources/templates/planetInfo.html
@@ -24,7 +24,7 @@
         <tr>
             <td>Владелец планеты</td>
             <td>:</td>
-            <td th:utext="${planet.lord.name}">...</td>
+            <td th:utext="${planet?.lord?.name}">...</td>
         </tr>
     </table>
     <br/><br/>
