--- a/src/main/resources/templates/addPlanet.html
+++ b/src/main/resources/templates/addPlanet.html
@@ -13,7 +13,7 @@
     <input type="text" th:field="*{name}" />
     <br/>
     Владелец планеты:
-    <input type="text" th:field="*{lord_id}" />
+    <input type="text" th:field="*{lord_id}" placeholder="Введите id лорда" />
     <br/>
     <input type="submit" value="Создать" />
 </form>
