--- a/src/main/resources/templates/lordList.html
+++ b/src/main/resources/templates/lordList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Список лордов</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
@@ -13,13 +13,13 @@
 <a href="addLord">Добавить лорда</a>
 <br/><br/>
 <div>
-    <table border="1">
+    <table border="1" th:id="lord-table">
         <tr>
             <th>Имя лорда</th>
             <th>Возраст лорда</th>
         </tr>
-        <tr th:each ="lord : ${lords}">
-            <td th:utext="${lord.name}">...</td>
+        <tr th:each ="lord : ${lords}" th:id="lord-list">
+            <td th:utext="${lord.name}" th:class="lord-name" th:id="${lord.id}">...</td>
             <td th:utext="${lord.age}">...</td>
         </tr>
     </table>
