--- a/src/main/resources/templates/planetList.html
+++ b/src/main/resources/templates/planetList.html
@@ -16,10 +16,12 @@
         <tr>
             <th>ID</th>
             <th>Название планеты</th>
+            <th>Изменить</th>
         </tr>
         <tr th:each ="planet : ${planets}">
             <td ><a th:href="@{/planetInfo/{id}(id=${planet.id})}" th:utext="${planet.id}"></a></td>
             <td th:utext="${planet.name}">...</td>
+            <td><a th:href="@{/planetInfo/{id}/edit(id=${planet.id})}">Изменить</a></td>
         </tr>
     </table>
 </div>
