--- a/src/main/resources/templates/editPlanet.html
+++ b/src/main/resources/templates/editPlanet.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Создать планету:</h1>
 
-<form th:action="@{/addPlanet}"
+<form th:action="@{/planetInfo/{id}/edit(id=${planet_id})}"
       th:object="${planetForm}" method="POST">
     Название планеты:
     <input type="text" th:field="*{name}" />
